<resources>
    <string name="app_name">Hw4</string>
    <string name="action_settings">Settings</string>
    <string name="pizza_option_1">Circle</string>
    <string name="pizza_option_2">Square</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="veggies">Veggies</string>
    <string name="anchovies">Anchovies</string>
    <string name="cheese_option_1">No Cheese</string>
    <string name="cheese_option_2">Cheese</string>
    <string name="cheese_option_3">Double Cheese</string>
    <string name="ingredients">Ingredients :</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
</resources>
